--- a/graphics.html
+++ b/graphics.html
@@ -553,7 +553,7 @@ Empowering businesses with innovative technology – that’s what we do best.
             <div class="hero-text">
                 <h1 class="animate-on-scroll">Bringing Your Brand to Life with Creative Design</h1>
                 <p class="animate-on-scroll">Dash and Dots: Crafting visually stunning designs that drive engagement and elevate your brand's presence.</p>
-                <a href="#" class="btn btn-secondary animate-on-scroll">Explore Our Designs</a>
+                <a href="index.html#contact-us" class="btn btn-secondary animate-on-scroll">Explore Our Designs</a>
             </div>
             <div class="hero-image animate-on-scroll">
                 <img src="/images/graphic_demo.jpeg" alt="Graphic Design Showcase">
@@ -714,7 +714,7 @@ Empowering businesses with innovative technology – that’s what we do best.
     <div class="container">
         <h2 class="animate-on-scroll">Ready to Elevate Your Brand with Stunning Designs?</h2>
         <p class="animate-on-scroll">Let Dash and Dots turn your brand vision into captivating design. Our expert team is ready to create designs that make your brand stand out.</p>
-        <a href="#" class="btn btn-secondary animate-on-scroll">Get in Touch</a>
+        <a href="index.html#contact-us" class="btn btn-secondary animate-on-scroll">Get in Touch</a>
     </div>
     <svg viewBox="0 0 100 100" preserveAspectRatio="none">
         <path d="M0,100 C30,50 70,50 100,100" fill="#ffffff"></path>
