--- a/node.html
+++ b/node.html
@@ -554,7 +554,7 @@ Empowering businesses with innovative technology – that’s what we do best.
             <div class="hero-text">
                 <h1 class="animate-on-scroll">Powering the Internet of Things</h1>
                 <p class="animate-on-scroll">Dash and Dots: Building smart IoT solutions with NodeMCU to connect devices and enable real-time data processing.</p>
-                <a href="#" class="btn btn-secondary animate-on-scroll">Explore IoT Solutions</a>
+                <a href="index.html#contact-us" class="btn btn-secondary animate-on-scroll">Explore IoT Solutions</a>
             </div>
             <div class="hero-image animate-on-scroll">
                 <img src="/images/mcu_board.jpg" alt="AVR/PIC Development Board">
@@ -708,7 +708,7 @@ Empowering businesses with innovative technology – that’s what we do best.
     <div class="container">
         <h2 class="animate-on-scroll">Ready to Build Your IoT Solution?</h2>
         <p class="animate-on-scroll">Let Dash and Dots create custom NodeMCU-based devices that connect your business to the physical world.</p>
-        <a href="#" class="btn btn-secondary animate-on-scroll">Start Your IoT Project</a>
+        <a href="index.html#contact-us" class="btn btn-secondary animate-on-scroll">Start Your IoT Project</a>
     </div>
     <svg viewBox="0 0 100 100" preserveAspectRatio="none">
         <path d="M0,100 C30,50 70,50 100,100" fill="#ffffff"></path>
