--- a/pharma.html
+++ b/pharma.html
@@ -591,7 +591,7 @@
             <div class="hero-text">
                 <h1 class="animate-on-scroll">Transforming the Pharma Industry with Technology</h1>
                 <p class="animate-on-scroll">Dash and Dots Tech: Empowering pharmaceutical companies with cutting-edge digital solutions for improved efficiency, research, and patient care.</p>
-                <a href="#" class="btn btn-secondary animate-on-scroll">Explore Solutions</a>
+                <a href="index.html#contact-us" class="btn btn-secondary animate-on-scroll">Explore Solutions</a>
             </div>
             <div class="hero-image animate-on-scroll">
                 <img src="/images/pharma_demo.jpeg" alt="Food App Mockup">
@@ -767,7 +767,7 @@
             transform your Pharmacy business?</h2>
         <p class="animate-on-scroll">Let Dash and Dots Tech create your perfect Pharmacy business solution. From mobile apps to
             websites, we've got you covered.</p>
-        <a href="#" class="btn btn-secondary animate-on-scroll">Reach Out to Us</a>
+        <a href="index.html#contact-us" class="btn btn-secondary animate-on-scroll">Reach Out to Us</a>
     </div>
     <svg viewBox="0 0 100 100" preserveAspectRatio="none">
         <path d="M0,100 C30,50 70,50 100,100" fill="#ffffff"></path>
