--- a/real_estate.html
+++ b/real_estate.html
@@ -592,7 +592,7 @@
             <div class="hero-text">
                 <h1 class="animate-on-scroll">Empowering Real Estate Businesses</h1>
                 <p class="animate-on-scroll"> Dash and Dots Tech: Creating immersive digital experiences for the Real Estate industry.</p>
-                <a href="#" class="btn btn-secondary animate-on-scroll">Explore Solutions</a>
+                <a href="index.html#contact-us" class="btn btn-secondary animate-on-scroll">Explore Solutions</a>
             </div>
             <div class="hero-image animate-on-scroll">
                 <img src="/images/real_demo.jpeg" alt="Health App Mockup">
@@ -773,7 +773,7 @@
         <h2 class="animate-on-scroll">Ready to Build Your Next Great Real Estate Buisness?</h2>
         <p class="animate-on-scroll">Let Dash and Dots Tech create your perfect Real Estate business solution. From mobile apps to
             websites, we've got you covered.Contact us today to get started!</p>
-        <a href="#" class="btn btn-secondary animate-on-scroll">Reach Out to Us</a>
+        <a href="index.html#contact-us" class="btn btn-secondary animate-on-scroll">Reach Out to Us</a>
     </div>
     <svg viewBox="0 0 100 100" preserveAspectRatio="none">
         <path d="M0,100 C30,50 70,50 100,100" fill="#ffffff"></path>
