--- a/tour.html
+++ b/tour.html
@@ -535,7 +535,7 @@ Empowering businesses with innovative technology – that’s what we do best.
                             </ul>
                             <ul class="navbar-nav">
                                 <li class="nav-item mx-1 position-static">
-                                    <a class="nav-link" href="training.html" role="button"
+                                    <a class="nav-link" href="index.html#contact-us" role="button"
                                         aria-label="Contact us">Contact us</a>
                                 </li>
                             </ul>
@@ -555,7 +555,7 @@ Empowering businesses with innovative technology – that’s what we do best.
                     <div class="hero-text">
                         <h1 class="animate-on-scroll">Empowering Travel Businesses</h1>
                         <p class="animate-on-scroll"> Dash and Dots Tech: Creating immersive digital experiences for the travel and tourism industry.</p>
-                        <a href="#" class="btn btn-secondary animate-on-scroll">Explore Solutions</a>
+                        <a href="index.html#contact-us" class="btn btn-secondary animate-on-scroll">Explore Solutions</a>
                     </div>
                     <div class="hero-image animate-on-scroll">
                         <img src="/images/tour_demo.jpeg" alt="Health App Mockup">
@@ -729,7 +729,7 @@ Empowering businesses with innovative technology – that’s what we do best.
             <div class="container">
                 <h2 class="animate-on-scroll">Ready to transform your Tour and travel business?</h2>
                 <p class="animate-on-scroll">Let Dash and Dots Tech create your perfect Tour and Travels business solution. From mobile apps to websites, we've got you covered.</p>
-                <a href="#" class="btn btn-secondary animate-on-scroll">Reach Out to Us</a>
+                <a href="index.html#contact-us" class="btn btn-secondary animate-on-scroll">Reach Out to Us</a>
             </div>
             <svg viewBox="0 0 100 100" preserveAspectRatio="none">
                 <path d="M0,100 C30,50 70,50 100,100" fill="#ffffff"></path>
