--- a/training.html
+++ b/training.html
@@ -553,7 +553,7 @@
             <div class="hero-text">
                 <h1 class="animate-on-scroll">Transforming Ideas into Digital Reality</h1>
                 <p class="animate-on-scroll">Dash and Dots: Crafting innovative web and mobile applications with the power of the MERN stack to drive business growth and user engagement. We also provide expert training in various technologies to help you stay ahead of the curve.</p>
-                <a href="#" class="btn btn-secondary animate-on-scroll">Explore Training Programs</a>
+                <a href="index.html#contact-us" class="btn btn-secondary animate-on-scroll">Explore Training Programs</a>
             </div>
             <div class="hero-image animate-on-scroll">
                 <img src="/images/mobile_demo.jpeg" alt="MERN Stack App Mockup">
@@ -723,7 +723,7 @@
     <div class="container">
         <h2 class="animate-on-scroll">Ready to Master the Latest Technologies?</h2>
         <p class="animate-on-scroll">Let Dash and Dots guide you through comprehensive training in Mobile App Development, Web Development, and other cutting-edge technologies to boost your career.</p>
-        <a href="#" class="btn btn-secondary animate-on-scroll">Start Your Training Journey</a>
+        <a href="index.html#contact-us" class="btn btn-secondary animate-on-scroll">Start Your Training Journey</a>
     </div>
     <svg viewBox="0 0 100 100" preserveAspectRatio="none">
         <path d="M0,100 C30,50 70,50 100,100" fill="#ffffff"></path>
