--- a/automobile.html
+++ b/automobile.html
@@ -571,7 +571,7 @@
                             </ul>
                             <ul class="navbar-nav">
                                 <li class="nav-item mx-1 position-static">
-                                    <a class="nav-link" href="training.html" role="button"
+                                    <a class="nav-link" href="index.html#contact-us" role="button"
                                         aria-label="Contact us">Contact us</a>
                                 </li>
                             </ul>
@@ -591,7 +591,7 @@
             <div class="hero-text">
                 <h1 class="animate-on-scroll">Revolutionizing the Automobile Industry</h1>
                 <p class="animate-on-scroll">Dash and Dots Tech: Crafting cutting-edge digital solutions for the modern automobile experience.</p>
-                <a href="#" class="btn btn-secondary animate-on-scroll">Explore Our Solutions</a>
+                <a href="index.html#contact-us" class="btn btn-secondary animate-on-scroll">Explore Our Solutions</a>
             </div>
             <div class="hero-image animate-on-scroll">
                 <img src="/images/auto_demo.jpeg" alt="Automobile App Mockup">
@@ -752,7 +752,7 @@
     <div class="container">
         <h2 class="animate-on-scroll">Ready to transform your Automobile business?</h2>
         <p class="animate-on-scroll">Let Dash and Dots Tech create your perfect Automobile business solution. From mobile apps to websites, we've got you covered.</p>
-        <a href="#" class="btn btn-secondary animate-on-scroll">Reach Out to Us</a>
+        <a href="index.html#contact-us" class="btn btn-secondary animate-on-scroll">Reach Out to Us</a>
     </div>
     <svg viewBox="0 0 100 100" preserveAspectRatio="none">
         <path d="M0,100 C30,50 70,50 100,100" fill="#ffffff"></path>
