--- a/avr.html
+++ b/avr.html
@@ -536,7 +536,7 @@ Empowering businesses with innovative technology – that’s what we do best.
                             </ul>
                             <ul class="navbar-nav">
                                 <li class="nav-item mx-1 position-static">
-                                    <a class="nav-link" href="training.html" role="button"
+                                    <a class="nav-link" href="index.html#contact-us" role="button"
                                         aria-label="Contact us">Contact us</a>
                                 </li>
                             </ul>
@@ -553,7 +553,7 @@ Empowering businesses with innovative technology – that’s what we do best.
             <div class="hero-text">
                 <h1 class="animate-on-scroll">Precision Embedded Solutions</h1>
                 <p class="animate-on-scroll">Dash and Dots: Engineering robust firmware for AVR/PIC microcontrollers to power industrial automation, IoT devices, and embedded systems.</p>
-                <a href="#" class="btn btn-secondary animate-on-scroll">Explore Embedded Solutions</a>
+                <a href="index.html#contact-us" class="btn btn-secondary animate-on-scroll">Explore Embedded Solutions</a>
             </div>
             <div class="hero-image animate-on-scroll">
                 <img src="/images/mcu_board.jpg" alt="AVR/PIC Development Board">
@@ -707,7 +707,7 @@ Empowering businesses with innovative technology – that’s what we do best.
     <div class="container">
         <h2 class="animate-on-scroll">Ready to Develop Your Embedded System?</h2>
         <p class="animate-on-scroll">Let Dash and Dots create reliable AVR/PIC firmware solutions for your mission-critical applications.</p>
-        <a href="#" class="btn btn-secondary animate-on-scroll">Start Your Embedded Project</a>
+        <a href="index.html#contact-us" class="btn btn-secondary animate-on-scroll">Start Your Embedded Project</a>
     </div>
     <svg viewBox="0 0 100 100" preserveAspectRatio="none">
         <path d="M0,100 C30,50 70,50 100,100" fill="#ffffff"></path>
