--- a/django.html
+++ b/django.html
@@ -553,7 +553,7 @@ Empowering businesses with innovative technology – that’s what we do best.
             <div class="hero-text">
                 <h1 class="animate-on-scroll">Transforming Ideas into Digital Reality</h1>
                 <p class="animate-on-scroll">Dash and Dots: Crafting innovative web and mobile applications with the power of Django to drive business growth and user engagement.</p>
-                <a href="#" class="btn btn-secondary animate-on-scroll">Explore Solutions</a>
+                <a href="index.html#contact-us" class="btn btn-secondary animate-on-scroll">Explore Solutions</a>
             </div>
             <div class="hero-image animate-on-scroll">
                 <img src="/images/mobile_demo.jpeg" alt="Django App Mockup">
@@ -723,7 +723,7 @@ Empowering businesses with innovative technology – that’s what we do best.
     <div class="container">
         <h2 class="animate-on-scroll">Ready to Build Your Next Great Django App?</h2>
         <p class="animate-on-scroll">Let Dash and Dots turn your vision into a powerful, user-friendly web application. Our team of Django experts is ready to bring your ideas to life.</p>
-        <a href="#" class="btn btn-secondary animate-on-scroll">Reach Out to Us</a>
+        <a href="index.html#contact-us" class="btn btn-secondary animate-on-scroll">Reach Out to Us</a>
     </div>
     <svg viewBox="0 0 100 100" preserveAspectRatio="none">
         <path d="M0,100 C30,50 70,50 100,100" fill="#ffffff"></path>
