--- a/ecommerce.html
+++ b/ecommerce.html
@@ -534,7 +534,7 @@ Empowering businesses with innovative technology – that’s what we do best.
             <div class="hero-text">
                 <h1 class="animate-on-scroll">Empowering Ecommerce Businesses</h1>
                 <p class="animate-on-scroll">Dash and Dots Tech: Creating immersive digital experiences for the E-commerce industry.</p>
-                <a href="#" class="btn btn-secondary animate-on-scroll">Explore Solutions</a>
+                <a href="index.html#contact-us" class="btn btn-secondary animate-on-scroll">Explore Solutions</a>
             </div>
             <div class="hero-image animate-on-scroll">
                 <img src="/images/ecommerce_demo.jpeg" alt="Food App Mockup">
@@ -695,7 +695,7 @@ Empowering businesses with innovative technology – that’s what we do best.
     <div class="container">
         <h2 class="animate-on-scroll">Ready to transform your E-commerce business?</h2>
         <p class="animate-on-scroll">Let Dash and Dots Tech create your perfect E-commerce business solution. From mobile apps to websites, we've got you covered.</p>
-        <a href="#" class="btn btn-secondary animate-on-scroll">Reach Out to Us</a>
+        <a href="index.html#contact-us" class="btn btn-secondary animate-on-scroll">Reach Out to Us</a>
     </div>
     <svg viewBox="0 0 100 100" preserveAspectRatio="none">
         <path d="M0,100 C30,50 70,50 100,100" fill="#ffffff"></path>
