--- a/food.html
+++ b/food.html
@@ -553,7 +553,7 @@ Empowering businesses with innovative technology – that’s what we do best.
             <div class="hero-text">
                 <h1 class="animate-on-scroll">Elevating Food eCommerce</h1>
                 <p class="animate-on-scroll">Dash and Dots Tech: Crafting cutting-edge apps and websites that revolutionize the food ordering experience.</p>
-                <a href="#" class="btn btn-secondary animate-on-scroll">Explore Solutions</a>
+                <a href="index.html#contact-us" class="btn btn-secondary animate-on-scroll">Explore Solutions</a>
             </div>
             <div class="hero-image animate-on-scroll">
                 <img src="/images/food_demo.jpg" alt="Food App Mockup">
@@ -714,7 +714,7 @@ Empowering businesses with innovative technology – that’s what we do best.
     <div class="container">
         <h2 class="animate-on-scroll">Ready to Revolutionize Your Food Business?</h2>
         <p class="animate-on-scroll">Let Dash and Dots Tech create your perfect food eCommerce solution. From mobile apps to websites, we've got you covered.</p>
-        <a href="#" class="btn btn-secondary animate-on-scroll">Get Your Free Consultation</a>
+        <a href="index.html#contact-us" class="btn btn-secondary animate-on-scroll">Get Your Free Consultation</a>
     </div>
     <svg viewBox="0 0 100 100" preserveAspectRatio="none">
         <path d="M0,100 C30,50 70,50 100,100" fill="#ffffff"></path>
