--- a/hospitals.html
+++ b/hospitals.html
@@ -590,7 +590,7 @@
             <div class="hero-text">
                 <h1 class="animate-on-scroll">Empowering Hospital Businesses</h1>
                 <p class="animate-on-scroll">Dash and Dots Tech: Creating immersive digital experiences for the Health industry.</p>
-                <a href="#" class="btn btn-secondary animate-on-scroll">Explore Solutions</a>
+                <a href="index.html#contact-us" class="btn btn-secondary animate-on-scroll">Explore Solutions</a>
             </div>
             <div class="hero-image animate-on-scroll">
                 <img src="/images/health_demo.jpeg" alt="Health App Mockup">
@@ -760,7 +760,7 @@
     <div class="container">
         <h2 class="animate-on-scroll">Ready to transform your hospital business?</h2>
         <p class="animate-on-scroll">Let Dash and Dots Tech create your perfect Health business solution. From mobile apps to websites, we've got you covered.</p>
-        <a href="#" class="btn btn-secondary animate-on-scroll">Reach Out to Us</a>
+        <a href="index.html#contact-us" class="btn btn-secondary animate-on-scroll">Reach Out to Us</a>
     </div>
     <svg viewBox="0 0 100 100" preserveAspectRatio="none">
         <path d="M0,100 C30,50 70,50 100,100" fill="#ffffff"></path>
