--- a/panel.html
+++ b/panel.html
@@ -555,7 +555,7 @@ Empowering businesses with innovative technology – that’s what we do best.
             <div class="hero-text">
                 <h1 class="animate-on-scroll">Transforming Ideas into Reality with Softwares</h1>
                 <p class="animate-on-scroll">Dash and Dots: Crafting innovative Panel Software solution that drive business growth and user engagement.</p>
-                <a href="#" class="btn btn-secondary animate-on-scroll">Explore Solutions</a>
+                <a href="index.html#contact-us" class="btn btn-secondary animate-on-scroll">Explore Solutions</a>
             </div>
             <div class="hero-image animate-on-scroll">
                 <img src="/images/panel_demo.jpeg" alt="Health App Mockup">
@@ -728,7 +728,7 @@ Empowering businesses with innovative technology – that’s what we do best.
     <div class="container">
         <h2 class="animate-on-scroll">Ready to Build Your Next Great Panel Software?</h2>
         <p class="animate-on-scroll">Let Dash and Dots turn your vision into a powerful, user-friendly Panel Software. Our team of experts is ready to bring your ideas to life.</p>
-        <a href="#" class="btn btn-secondary animate-on-scroll">Reach Out to Us</a>
+        <a href="index.html#contact-us" class="btn btn-secondary animate-on-scroll">Reach Out to Us</a>
     </div>
     <svg viewBox="0 0 100 100" preserveAspectRatio="none">
         <path d="M0,100 C30,50 70,50 100,100" fill="#ffffff"></path>
