--- a/plc.html
+++ b/plc.html
@@ -553,7 +553,7 @@ Empowering businesses with innovative technology – that’s what we do best.
             <div class="hero-text">
                 <h1 class="animate-on-scroll">Precision PLC Solutions</h1>
                 <p class="animate-on-scroll">Dash and Dots: Engineering high-performance PLC systems for industrial automation, process control, and smart manufacturing.</p>
-                <a href="#" class="btn btn-secondary animate-on-scroll">Explore PLC Solutions</a>
+                <a href="index.html#contact-us" class="btn btn-secondary animate-on-scroll">Explore PLC Solutions</a>
             </div>
             <div class="hero-image animate-on-scroll">
                 <img src="/images/plc_system.jpg" alt="PLC Control System">
@@ -707,7 +707,7 @@ Empowering businesses with innovative technology – that’s what we do best.
     <div class="container">
         <h2 class="animate-on-scroll">Ready to Optimize Your Industrial Automation?</h2>
         <p class="animate-on-scroll">Let Dash and Dots develop cutting-edge PLC solutions for your industry.</p>
-        <a href="#" class="btn btn-secondary animate-on-scroll">Start Your PLC Project</a>
+        <a href="index.html#contact-us" class="btn btn-secondary animate-on-scroll">Start Your PLC Project</a>
     </div>
     <svg viewBox="0 0 100 100" preserveAspectRatio="none">
         <path d="M0,100 C30,50 70,50 100,100" fill="#ffffff"></path>
