--- a/ruby.html
+++ b/ruby.html
@@ -553,7 +553,7 @@ Empowering businesses with innovative technology – that’s what we do best.
             <div class="hero-text">
                 <h1 class="animate-on-scroll">Transforming Ideas into Digital Reality</h1>
                 <p class="animate-on-scroll">Dash and Dots: Crafting innovative web applications with the power of Ruby on Rails to drive business growth and user engagement.</p>
-                <a href="#" class="btn btn-secondary animate-on-scroll">Explore Solutions</a>
+                <a href="index.html#contact-us" class="btn btn-secondary animate-on-scroll">Explore Solutions</a>
             </div>
             <div class="hero-image animate-on-scroll">
                 <img src="/images/mobile_demo.jpeg" alt="Rails App Mockup">
@@ -707,7 +707,7 @@ Empowering businesses with innovative technology – that’s what we do best.
     <div class="container">
         <h2 class="animate-on-scroll">Ready to Build Your Next Great Rails Application?</h2>
         <p class="animate-on-scroll">Let Dash and Dots leverage Ruby on Rails' full potential for your project. Our experts deliver robust, scalable web solutions.</p>
-        <a href="#" class="btn btn-secondary animate-on-scroll">Start Your Project</a>
+        <a href="index.html#contact-us" class="btn btn-secondary animate-on-scroll">Start Your Project</a>
     </div>
     <svg viewBox="0 0 100 100" preserveAspectRatio="none">
         <path d="M0,100 C30,50 70,50 100,100" fill="#ffffff"></path>
