--- a/web-app.html
+++ b/web-app.html
@@ -536,7 +536,7 @@ Empowering businesses with innovative technology – that’s what we do best.
                             </ul>
                             <ul class="navbar-nav">
                                 <li class="nav-item mx-1 position-static">
-                                    <a class="nav-link" href="training.html" role="button"
+                                    <a class="nav-link" href="index.html#contact-us" role="button"
                                         aria-label="Contact us">Contact us</a>
                                 </li>
                             </ul>
@@ -556,7 +556,7 @@ Empowering businesses with innovative technology – that’s what we do best.
                     <div class="hero-text">
                         <h1 class="animate-on-scroll">Transforming Ideas into Web-App Reality</h1>
                         <p class="animate-on-scroll"> Dash and Dots: Crafting innovative Web-App that drive business growth and user engagement.</p>
-                        <a href="#" class="btn btn-secondary animate-on-scroll">Explore Solutions</a>
+                        <a href="index.html#contact-us" class="btn btn-secondary animate-on-scroll">Explore Solutions</a>
                     </div>
                     <div class="hero-image animate-on-scroll">
                         <img src="/images/web_demo.jpeg" alt="Health App Mockup">
@@ -735,7 +735,7 @@ Empowering businesses with innovative technology – that’s what we do best.
             <div class="container">
                 <h2 class="animate-on-scroll">Ready to Build Your Next Great Web-App?</h2>
                 <p class="animate-on-scroll">Let Dash and Dots turn your vision into a powerful, user-friendly website application. Our team of experts is ready to bring your ideas to life.</p>
-                <a href="#" class="btn btn-secondary animate-on-scroll">Reach Out to Us</a>
+                <a href="index.html#contact-us" class="btn btn-secondary animate-on-scroll">Reach Out to Us</a>
             </div>
             <svg viewBox="0 0 100 100" preserveAspectRatio="none">
                 <path d="M0,100 C30,50 70,50 100,100" fill="#ffffff"></path>
