--- a/Salons.html
+++ b/Salons.html
@@ -157,17 +157,16 @@ Empowering businesses with innovative technology – that’s what we do best.
                                                 </div>
                                                 <!-- Content Sections (Team, Gallery, etc.) -->
                                                 <div id="team-content" style="display: none">
-                                               <!-- Start of meet our team section -->
+                                         <!-- Start of meet our team section -->
                           <div class="row">
                             <div class="col-lg-4">
                               <div class="card-team">
                                 <div class="team-img-container">
                                   <img src="/images/sumit_profile.jpg" />
                                 </div>
-                                <div class="content-team">
-                                  <a class="nav-link"
-                                    onclick="navigateToPage('ProfileS.html')">
-                                  <h6 class="team-member-name">Sumit Ranjan Pratihast</h6>
+                                <div class="content-team" onclick="navigateToPage('ProfileS.html')">
+                                  <a class="nav-link">
+                                  <h6 class="team-member-name">Sumit Kumar Pratihast</h6>
                                   View Profile</a>
                                 </div>
                               </div>
@@ -177,9 +176,8 @@ Empowering businesses with innovative technology – that’s what we do best.
                                 <div class="team-img-container">
                                   <img src="/images/bittu_profile.jpg" />
                                 </div>
-                                <div class="content-team">
-                                  <a class="nav-link"
-                                    onclick="navigateToPage('ProfileB.html')">
+                                <div class="content-team"  onclick="navigateToPage('ProfileB.html')">
+                                  <a class="nav-link">
                                   <h6 class="team-member-name">Bittu Kumar Pratihas</h6>
                                   View Profile</a>
                                 </div>
@@ -190,9 +188,8 @@ Empowering businesses with innovative technology – that’s what we do best.
                                 <div class="team-img-container">
                                   <img src="/images/mihir_profile.jpg" />
                                 </div>
-                                <div class="content-team">
-                                  <a class="nav-link"
-                                    onclick="navigateToPage('ProfileM.html')">
+                                <div class="content-team" onclick="navigateToPage('ProfileM.html')">
+                                  <a class="nav-link">
                                   <h6 class="team-member-name">Mihir Kumar Mishra</h6>
                                   View Profile</a>
                                 </div>
@@ -203,9 +200,8 @@ Empowering businesses with innovative technology – that’s what we do best.
                                   <div class="team-img-container">
                                       <img src="/images/myprofile.jpg" />
                                   </div>
-                                  <div class="content-team">
-                                    <a class="nav-link"
-                                    onclick="navigateToPage('profileD.html')">
+                                  <div class="content-team" onclick="navigateToPage('profileD.html')">
+                                    <a class="nav-link" >
                                           <h6 class="team-member-name">Dheeraj Yadav</h6>
                                           View Profile
                                       </a>
@@ -219,9 +215,8 @@ Empowering businesses with innovative technology – that’s what we do best.
                                   
                                   <img src="/images/rohit_profile.jpg" />
                                 </div>
-                                <div class="content-team">
-                                  <a class="nav-link"
-                                    onclick="navigateToPage('ProfileR.html')">
+                                <div class="content-team" onclick="navigateToPage('ProfileR.html')">
+                                  <a class="nav-link">
                                   <h6 class="team-member-name">Rohit Gupta</h6>
                                   View Profile</a>
                                 </div>
@@ -232,9 +227,8 @@ Empowering businesses with innovative technology – that’s what we do best.
                                 <div class="team-img-container">
                                   <img src="/images/Ujjaval_profile.jpg" />
                                 </div>
-                                <div class="content-team">
-                                  <a class="nav-link"
-                                    onclick="navigateToPage('ProfileU.html')">
+                                <div class="content-team" onclick="navigateToPage('ProfileU.html')">
+                                  <a class="nav-link">
                                   <h6 class="team-member-name">Ujjaval Raj</h6>
                                  View Profile</a>
                                 </div>
