--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
   <meta property="og:url" content=https://dashanddots.tech>
   <meta property="og:description" content="Discover Excellence with Dash and Dots! Elevate your business with our
     expertise in desktop software, websites, mobile apps, IoT solutions, and more. Unleash the power of
-    innovation – Click to explore and transform your future today!"">
+    innovation – Click to explore and transform your future today!">
   <meta property=" og:type" content=website>
   <meta property="og:image" content="images/logo1.png">
   <!--FIXME: change thumbnail -->
@@ -150,7 +150,7 @@
                                 </div>
                                 <div class="content-team">
                                   <h6 class="team-member-name">Sumit Kumar Pratihast</h6>
-                                  <a href="">View Profile</a>
+                                  <a onclick="navigateToPage('ProfileS.html')">View Profile</a>
                                 </div>
                               </div>
                             </div>
@@ -161,7 +161,7 @@
                                 </div>
                                 <div class="content-team">
                                   <h6 class="team-member-name">Bittu Kumar Pratihas</h6>
-                                  <a href="">View Profile</a>
+                                  <a onclick="navigateToPage('ProfileB.html')">View Profile</a>
                                 </div>
                               </div>
                             </div>
@@ -172,7 +172,7 @@
                                 </div>
                                 <div class="content-team">
                                   <h6 class="team-member-name">Mihir Kumar Mishra</h6>
-                                  <a href="ProfileM.html">View Profile</a>
+                                  <a onclick="navigateToPage('ProfileM.html')">View Profile</a>
                                 </div>
                               </div>
                             </div>
@@ -183,7 +183,7 @@
                                 </div>
                                 <div class="content-team">
                                   <h6 class="team-member-name">Dheeraj Yadav</h6>
-                                  <a href="profileD.html">View Profile</a>
+                                  <a onclick="navigateToPage('profileD.html')">View Profile</a>
                                 </div>
                               </div>
                             </div>
@@ -194,18 +194,18 @@
                                 </div>
                                 <div class="content-team">
                                   <h6 class="team-member-name">Rohit Gupta</h6>
-                                  <a href="">View Profile</a>
+                                  <a onclick="navigateToPage('ProfileR.html')">View Profile</a>
                                 </div>
                               </div>
                             </div>
                             <div class="col-lg-4">
                               <div class="card-team">
                                 <div class="team-img-container">
-                                  <img src="/images/Ujjaval_profile.jpg" />
+                                  <img src="/images/ujjaval_profile.jpg" />
                                 </div>
                                 <div class="content-team">
                                   <h6 class="team-member-name">Ujjaval Raj</h6>
-                                  <a href="">View Profile</a>
+                                  <a onclick="navigateToPage('ProfileU.html')">View Profile</a>
                                 </div>
                               </div>
                             </div>
