--- a/index.html
+++ b/index.html
@@ -862,7 +862,7 @@
                       </div>
                       <div class="banner-info-right col-6 no-padding">
                         <span class="close-brackets">}</span>
-                        <i class="fa fa-smile color-green"></i>
+                        <i class="fa fa-smile color-yellow"></i>
                       </div>
                     </div>
 
@@ -882,7 +882,7 @@
                       </div>
                       <div class="banner-info-right col-6 no-padding">
                         <span class="close-brackets">}</span>
-                        <i class="fa fa-check-circle color-green"></i>
+                        <i class="fa fa-check-circle color-yellow"></i>
                       </div>
                     </div>
                   </div>
