--- a/ProfileM.html
+++ b/ProfileM.html
@@ -612,11 +612,11 @@
                         </div>
                     </div>
                     <div class="certifications">
-                        <h2>Certifications</h2>
+                        <h2 class="c-title">CERTIFICATION</h2>
                         <div class="cert-list">
-                            <span class="cert-item"><li>Adobe Certified Expert</li></span>
-                            <span class="cert-item"><li>Google UX Design Professional</li></span>
-                            <span class="cert-item"><li>Certified Information Systems Security Professional</li></span>
+                            <span class="stat-label"><li>Adobe Certified Expert</li></span>
+                            <span class="stat-label"><li>Google UX Design Professional</li></span>
+                            <span class="stat-label"><li>Certified Information Systems Security Professional</li></span>
                         </div>
                     </div>
                 </div>
