--- a/ProfileB.html
+++ b/ProfileB.html
@@ -582,7 +582,7 @@
             <div class="container">
 
             <section class="hero1">
-                <div class="hero-content">
+                <div class="hero-content1">
                     <p class="greeting">HEY THERE!</p>
                     <h1 class="name">I AM BITTU KUMAR PRATIHAST</h1>
                     <p class="title">HUMAN RESOURCES MANAGER</p>
@@ -622,7 +622,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="hero-image">
+                <div class="hero-image1">
                     <img src="/images/bittu_profile.jpg">
                 </div>
             </section>
