--- a/profileD.html
+++ b/profileD.html
@@ -582,7 +582,7 @@
             <div class="container">
 
             <section class="hero1">
-                <div class="hero-content">
+                <div class="hero-content1">
                     <p class="greeting">HEY THERE!</p>
                     <h1 class="name">I AM DHEERAJ YADAV</h1>
                     <div class="social-links">
@@ -621,7 +621,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="hero-image">
+                <div class="hero-image1">
                     <img src="/images/myprofile.jpg">
                 </div>
             </section>
