--- a/ProfileM.html
+++ b/ProfileM.html
@@ -581,7 +581,7 @@
             <div class="container">
 
             <section class="hero1">
-                <div class="hero-content">
+                <div class="hero-content1">
                     <p class="greeting">HEY THERE!</p>
                     <h1 class="name">I AM MIHIR KUMAR MISHRA</h1>
                     <div class="social-links">
@@ -620,7 +620,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="hero-image">
+                <div class="hero-image1">
                     <img src="/images/mihir_profile.jpg">
                 </div>
             </section>
