--- a/index.html
+++ b/index.html
@@ -107,6 +107,7 @@
             grid-template-columns: 1fr 1fr;
             gap: 2rem;
             align-items: start;
+            margin-top: 3rem;
         }
 
         .info-section {
@@ -222,6 +223,10 @@
         .support {
             background-color: #ffb4ba;
             color: #ef4444;
+        }
+
+        .mb-6{
+          margin-top: 6rem;
         }
 
         @media (max-width: 968px) {
@@ -1812,8 +1817,10 @@
           <div class="gk-dd-shape grey-white-color index-3">
             <!-- Pricing Section Begins -->
             <div class="container">
-              <h1 class="main-title">Make Your Business More Competitive And Enduring</h1>
-              
+              <h3 class="section-msg1 color-grey text-uppercase mb-6">
+                <span class="text-extrabold">Make Your Business</span>
+                <br>More Competetive and Enduring
+              </h3>
               <div class="content-wrapper">
                   <div class="info-section">
                       <div class="info-block">
