--- a/index.html
+++ b/index.html
@@ -1891,7 +1891,7 @@
                       <span class="text-extrabold">Watch</span> Demo
                     </h2>
                     <!-- Shape Down Arrow -->
-                    <p class="color-white text-center">
+                    <p class="color-black text-center">
                       <i class="flaticon flaticon-yield gk-triangle-medium"></i>
                     </p>
                     <!-- Description -->
