--- a/index.html
+++ b/index.html
@@ -1543,7 +1543,7 @@
                   >
                     <!-- Title -->
                     <h2 class="section-title color-grey">
-                      <span class="text-extrabold">App</span> Screenshot
+                      <span class="text-extrabold">Some of our</span> Work
                     </h2>
                     <!-- Shape Down Arrow -->
                     <p class="text-center color-grey">
