--- a/index.html
+++ b/index.html
@@ -823,7 +823,7 @@
                 <!-- Banner Button -->
                 <div class="banner-button">
                   <a
-                    href="#"
+                    href="index.html#contact-us"
                     class="btn gk-btn white-btn gk-btn-margin"
                     role="button"
                     >Book yours now</a
