--- a/index.html
+++ b/index.html
@@ -1551,7 +1551,7 @@
                     </p>
                     <!-- Description -->
                     <h3 class="section-msg text-center color-grey">
-                      Included screens in the app
+                      Some snapshots from some of our Apps
                     </h3>
                   </div>
                   <!-- Screenshot Right Info Ends -->
