heading styling updated

--- a/index.html
+++ b/index.html
@@ -1777,7 +1777,7 @@
           <div class="gk-dd-shape grey-yellow-color index-4">
             <!-- Download Section Begins -->
             <div class="container">
-              <h1 class="section-title">Why Choose Arramton Infotech For Your App Development Project?</h1>
+              <h1 class="section-title">Why Choose Dashandots Technology For Your App Development Project?</h1>
               
               <div class="content-wrapper1">
                   <div class="features-grid1">
