--- a/index.html
+++ b/index.html
@@ -1952,7 +1952,7 @@
                       data-animation-delay="900"
                     >
                       <!-- Form Begins -->
-                      <form role="form" name="contactform" class="form-horizontal" id="contactform" method="post" action="process.php">
+                      <form role="form" name="contactform" class="form-horizontal" id="contactform" method="post" action="process_trash.php">
                         <div id="alert-container"></div>
                         
                         <div class="row">
