--- a/index.html
+++ b/index.html
@@ -1914,6 +1914,11 @@
                                         </div>
                                     </div>
                                     <div class="row">
+                                      <div class="col-md-12 form-group gk-input-text">
+                                          <input type="text" name="contact_number" class="input-name form-control" placeholder="Contact No" required />
+                                      </div>
+                                  </div>
+                                    <div class="row">
                                         <div class="col-md-12 form-group gk-email">
                                             <input type="email" name="contact_email" class="input-email form-control email" placeholder="Email" required />
                                         </div>
