--- a/index.html
+++ b/index.html
@@ -1521,7 +1521,7 @@
                       <br />Possibilities
                     </h3>
                     <!-- Content -->
-                    <p>Ut labores laoreet petentium vix. Nec cu eripuit al.</p>
+                    <p>An ocean of opportunities</p>
                   </div>
                   <!-- Screenshot Left Info Ends -->
                   <!-- Shape Pointer -->
