--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     />
     <meta
       name="description"
-      content="Discover our exceptional expertise in desktop software, websites, mobile apps, IoT, and automation. Empowering businesses since 2020. Book now!"
+      content="At Dashandots, we create innovative software solutions and digital marketing strategies to help businesses thrive. Specializing in custom software, technology, and development, we ensure happy clients with cutting-edge desktop software, websites, mobile apps, IoT, and automation. Feel confident in our expertise since 2020."
     />
     <meta charset="utf-8" />
     <meta
@@ -206,7 +206,7 @@
                               <div class="col-lg-4">
                                 <div class="card-team">
                                   <div class="team-img-container">
-                                    <img src="/images/sumit_profile.jpg" />
+                                    <img src="/images/sumit_profile.jpg" alt="sumit_profile" />
                                   </div>
                                   <div
                                     class="content-team"
@@ -224,7 +224,7 @@
                               <div class="col-lg-4">
                                 <div class="card-team">
                                   <div class="team-img-container">
-                                    <img src="/images/bittu_profile.jpg" />
+                                    <img src="/images/bittu_profile.jpg" alt="bittu_profile" />
                                   </div>
                                   <div
                                     class="content-team"
@@ -242,7 +242,7 @@
                               <div class="col-lg-4">
                                 <div class="card-team">
                                   <div class="team-img-container">
-                                    <img src="/images/mihir_profile.jpg" />
+                                    <img src="/images/mihir_profile.jpg" alt="mihir_profile" />
                                   </div>
                                   <div
                                     class="content-team"
@@ -260,7 +260,7 @@
                               <div class="col-lg-4">
                                 <div class="card-team">
                                   <div class="team-img-container">
-                                    <img src="/images/myprofile.jpg" />
+                                    <img src="/images/myprofile.jpg" alt="dheeraj_profile" />
                                   </div>
                                   <div
                                     class="content-team"
@@ -279,7 +279,7 @@
                               <div class="col-lg-4">
                                 <div class="card-team">
                                   <div class="team-img-container">
-                                    <img src="/images/rohit_profile.jpg" />
+                                    <img src="/images/rohit_profile.jpg" alt="rohit_profile"  />
                                   </div>
                                   <div
                                     class="content-team"
@@ -297,7 +297,7 @@
                               <div class="col-lg-4">
                                 <div class="card-team">
                                   <div class="team-img-container">
-                                    <img src="/images/ujjaval_profile.jpg" />
+                                    <img src="/images/ujjaval_profile.jpg" alt="ujjaval_profile"  />
                                   </div>
                                   <div
                                     class="content-team"
@@ -815,22 +815,22 @@
                 <div class="text-slider">
                   <ul class="slide-text slides">
                     <li class="capitalize">
-                      <h1 class="text-uppercase">
+                      <h2 class="text-uppercase">
                         <span class="text-extrabold">Tech</span>
                         Meets Innovation
-                      </h1>
+                      </h2>
                     </li>
                     <li class="capitalize">
-                      <h1 class="text-uppercase">
+                      <h2 class="text-uppercase">
                         <span class="text-extrabold">Best</span> Solution
                         Partner
-                      </h1>
+                      </h2>
                     </li>
                     <li class="capitalize">
-                      <h1 class="text-uppercase">
+                      <h2 class="text-uppercase">
                         <span class="text-extrabold"> Key</span> Field
                         Excellence
-                      </h1>
+                      </h2>
                     </li>
                   </ul>
                 </div>
@@ -1826,10 +1826,10 @@
           <div class="gk-dd-shape grey-yellow-color index-4">
             <!-- Download Section Begins -->
             <div class="container">
-              <h1 class="section-title">
+              <h2 class="section-title">
                 Why Choose Dashandots Technology For Your App Development
                 Project?
-              </h1>
+              </h2>
 
               <div class="content-wrapper1">
                 <div class="features-grid1">
