--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
     <meta name="twitter:site" content="@dashandots.tech" />
     <meta
       name="twitter:description"
-      content="Discover our exceptional expertise in desktop software, websites, mobile apps, IoT, and automation. Empowering businesses since 2020. Book now!"
+      content="Discover our exceptional expertise in desktop software, websites, mobile apps, IoT, and automation. Empowering businesses since 2020."
     />
     <meta name="twitter:app:name:iphone" content="Dashandots Technology" />
     <meta name="twitter:app:country" content="India" />
