--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     property="og:description" content="Discover Excellence with Dash and Dots!
     Elevate your business with our expertise in desktop software, websites,
     mobile apps, IoT solutions, and more. Unleash the power of innovation –
-    Click to explore and transform your future today!"">
+    Click to explore and transform your future today!">
     <meta property=" og:type" content="website" />
     <meta property="og:image" content="images/logo1.png" />
     <!--FIXME: change thumbnail -->
@@ -840,10 +840,7 @@
                     <p class="banner-text">
                       <span class="extrabold-italic"
                         >Dashandots Technology </span
-                      >provides modern software development solution and
-                      qualified industrial training. We create tailored software
-                      solutions and help aspiring tech professionals gain the
-                      skills they need to thrive.
+                      >We provide comprehensive and modern software development solutions designed to meet the evolving needs of businesses and individuals. Our expert team specializes in creating tailored software solutions that are both innovative and efficient, ensuring the highest quality for all your technological needs. In addition, we offer qualified industrial training programs to help aspiring tech professionals build the skills and expertise required to succeed in today’s fast-paced digital landscape. Through our customized training programs, we empower individuals with the practical knowledge and confidence they need to thrive in the competitive tech industry.
                     </p>
                   </div>
                 </div>
